--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="margin:0px;">
     <div id="root"> </div>
 </body>
+
 </html>
